--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>Resume Example</h1>
-    <iframe src="./resumes/RyanPResume22.pdf" width="100%" height="750px">
+    <iframe src="./resumes/RyanPResumeEmail.pdf" width="100%" height="750px">
     </iframe>
   </body>
 </html>
