--- a/site/index.html
+++ b/site/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title of the document</title>
+    <title>Ryan Paredes</title>
   </head>
   <body>
-    <h1>Resume Example</h1>
-    <iframe src="./resumes/RyanPResumeEmail.pdf" width="100%" height="750px">
-    </iframe>
+    <h1 style="text-align:center;">Ryan Paredes' Site Intro</h1>
+    <pre>
+      The content of this site isn't the important part. 
+      
+      This html page is simply content to showcase a simple DevOps example for automating the infrastructure and deployment of this content to AWS resources.
+
+      For the codebase, check out <a href="https://github.com/RyanAP1/PersonalSite">my GitHub Page</a>. However, in addition to my resume, I will include diagrams on this page outlining the overall architecture and deployment flow.
+    </pre>
+
+    <div style="margin:auto; padding:10px; width:50%;">
+      <iframe src="./resumes/RyanPResumeEmail.pdf" style="width:100%; height:750px;">
+      </iframe>
+    </div>
+
+    <h2 style="text-align:center;">Hosted Site Pattern</h2>
+    <div style="margin:auto; padding:10px; width:50%;">
+      <img src="./imgs/SitePattern.png" alt="AWS Site Pattern" style="width:100%;height:auto;">
+    </div>
+
+    <h2 style="text-align:center;">CI/CD Overview</h2>
+    <div style="margin:auto; padding:10px; width:75%;">
+      <img src="./imgs/CICDOverview.png" alt="CI/CD overview" style="width:100%;height:auto;">
+    </div>
+
   </body>
 </html>
