--- a/site/index.html
+++ b/site/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   
-  <body id="about" class= "bg-light" style="font-family: sans-serif;">
+  <body id="about" class="bg-light" style="font-family: sans-serif;">
   
     <nav id=mainNav class="navbar sticky-top navbar-expand-lg navbar-dark font-weight-bold text-uppercase" style="background-color:#05386b;">
       <a class="navbar-brand text-white" style="padding-left:5%;" href="https://ryanaparedes.com">Ryan Paredes</a>
@@ -55,7 +55,7 @@
                 <h2 class="page-section-heading text-dark text-center text-uppercase text-secondary mb-0 font-weight-bold rounded text-uppercase">
                     Links</h2>
             </div>
-            <!-- Portfolio card-deck entries first row -->
+            <!-- card-deck entries first row -->
             <div class="card-deck" style="margin-bottom: 1%; margin-left: 3%; margin-right: 3%;">
                 <div class="card border-dark">
                     <img class="card-img-top mx-auto pt-3" src="imgs/LI_Logo.png" alt="Card image cap"
